# tressed

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yaml
src/gluetypes/: __version__.py  exceptions.py  loader.py  predicates.py
src/gluetypes/loader/: __init__.py  loader.py  loaders.py  specializer.py  specializers.py  types.py
src/tressed/: __init__.py  __version__.py  alias.py  discriminated_union.py  exceptions.py  predicates.py  type_form.py  type_path.py
src/tressed/alias/: __init__.py  functions.py  resolver.py  types.py
src/tressed/dumper/: __init__.py  dumper.py  dumpers.py  types.py
src/tressed/loader/: __init__.py  loader.py  loaders.py  specializer.py  specializers.py  types.py
tests/: test_alias.py  test_dumper.py  test_gluetypes.py  test_imports.py  test_loader.py  test_predicates.py  test_specializers.py
