[project]
name = "tressed"
authors = [
  { name="Thomas Cellerier", email="thomascellerier@gmail.com" },
]
version = "0.0.3"
description = "Deserialize and serialize types, in any order"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = []

[project.urls]
Homepage = "https://github.com/thomascellerier/tressed"
Repository = "https://github.com/thomascellerier/tressed.git"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.6",
    "ty>=0.0.1a28",
]

[tool.uv.build-backend]
module-name = "tressed"
module-root = "src"

[tool.ruff]
src = ["src", "tests"]

[tool.ty.environment]
root = ["./src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
warn_unused_ignores = true
files = [
  "src",
  "tests",
]
